--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -77,3 +77,31 @@ app-sidebar-second {
   flex-wrap: nowrap;
   overflow-x: auto; /* Agrega desplazamiento horizontal si los elementos desbordan */
 }
+
+.tabs-container app-tabs {
+  display: inline-block; 
+  height: 80px;
+  line-height: 80px; 
+  list-style: none;
+  padding: 0 10px;
+}
+.my-button{
+  --border-width: 0;
+  border-bottom: none !important;
+  color: black;
+  width: fit-content;
+  height: 50px;
+  border-radius: 10px;
+}
+
+.my-icon-close {
+  color: red;
+}
+
+.my-icon-close:hover {
+  color: #ff00007e;
+}
+
+ion-label {
+  text-transform:none;
+}
