--- a/src/app/sidebar-accordeon/sidebar-accordeon.component.scss
+++ b/src/app/sidebar-accordeon/sidebar-accordeon.component.scss
@@ -98,4 +98,5 @@
     border-color: none !important; 
     border-width: 0px !important;
     --box-shadow: none !important;
+    min-width: 50px;
   }
