Add documentation to Backend related implementations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
         </ion-grid>
         <app-block-component *ngIf="block_view"></app-block-component>
 
-        <pre style="padding: 15px;" *ngIf="!block_view" id="myText"></pre>
+        <pre style="padding: 15px;" *ngIf="!block_view" id="yamlText"></pre>
       </ion-content>
     </ion-split-pane>
   
