--- a/src/app/pop-up-save/pop-up-save.component.scss
+++ b/src/app/pop-up-save/pop-up-save.component.scss
@@ -1,30 +1,58 @@
-.block {
-    width: 100%;
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  /* Texto centrado horizontalmente en el margen */
-.center-text {
-  font-size: 20px; /* Tamaño de fuente deseado */
-  margin-bottom: 20px; /* Espacio entre el texto y los botones (ajusta según sea necesario) */
+ion-modal {
+  --height: 60%; /* Ajusta la altura deseada */
+  --width: 80%; /* Ajusta el ancho deseado */
+  --border-radius: 20px; /* Ajusta el radio de borde según sea necesario */
+  top: 20%; /* Ajusta la posición vertical */
+  left: 10%; /* Ajusta la posición horizontal */
 }
 
-/* Centrar todo el contenido vertical y horizontalmente en la página */
+.my-custom-modal {
+  --height: 20%;
+  --width: 80%;
+  --border-radius: 50px;
+  margin-top: -20%;
+  margin-left: 10%;
+  
+}
+
+
+.block {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px; /* Ajusta el valor según sea necesario para el efecto deseado */
+}
+
+ion-title.titleicon {
+  font-family: 'Helvetica', sans-serif;
+  font-size: 24px; // Ajusta el tamaño de la letra según tus preferencias
+}
+
+ion-text.center-text {
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #000000; /* Cambia este valor al color que desees */
+  font-family: 'Helvetica', sans-serif; /* Cambia 'Arial' a la fuente que desees */
+  font-weight: bold;
+}
+
 .center-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: -10vh; /* Ajusta la altura deseada */
+  height: 10vh; /* Ajusta la altura deseada o elimina si no es necesario */
+  margin: 20px; /* Ajusta el margen según sea necesario */
+  --background: #add8e6; /* Cambia este valor al color que desees */
 }
 
 .center-buttons {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   margin-top: 30px; /* Espacio entre los botones (ajusta según sea necesario) */
 }
 
@@ -34,37 +62,62 @@
 }
 
 
-  ion-modal {
-    --height: auto;
-  }
-  
-  ion-title {
-    --color: #000000;
-  }
-  
-  ion-toolbar {
-    --background: green;
-  }
 
-  .cross_button{
-    width: 5%;
-    height: 5%;
-    margin-right:3%;
-  }
+ion-title {
+  --color: #ffffff;
+}
 
-  ion-content {
-    --align-items: center;
-    --padding-start: 10%;
-    --padding-end: 5%;
-    --padding-top: 3%;
-  }
+ion-toolbar {
+  --background: #630fee;
+}
 
-  .face{
-    width: 45%;
-    height: 45%;
-    align-content: center;
-  }
+.cross_button {
+  width: 5%;
+  height: 5%;
+  margin-right: 3%;
+}
 
-  .button_save{
-    padding-top: 5%;
-  }
+ion-content {
+  --align-items: center;
+  --padding-start: 10%;
+  --padding-end: 5%;
+  --padding-top: 3%;
+  margin: 20px; /* Puedes agregar un margen también aquí si es necesario */
+}
+
+.face {
+  width: 45%;
+  height: 45%;
+  align-content: center;
+}
+
+ion-button.save-button {
+  font-size: 16px;
+  margin: 0 10px;
+  border-radius: 20px; /* Ajusta este valor para que el botón tenga esquinas ovaladas */
+  padding: 5% 10%; /* Ajusta los valores de padding según sea necesario */
+  margin-left: auto; /* Mueve el botón completamente a la derecha */
+}
+
+img.cross_button {
+  width: 30px;
+  height: 30px;
+}
+
+ion-button.save-button img {
+  width: 50px;
+  height: 50px;
+  filter: invert(1); /* Invierte los colores para hacer el icono blanco */
+  margin-left: 10px; /* Agrega un espacio entre el icono y el texto, ajusta según sea necesario */
+}
+
+ion-input.center-input {
+  width: 100%;
+  color: #000000; /* Cambia este valor al color que desees para el texto */
+  border: 2px solid #000000; /* Cambia este valor al color que desees para el borde */
+  background-color: #f0f0f0; /* Cambia este valor al color que desees para el fondo */
+  padding: 8px; /* Ajusta el espaciado interior según sea necesario */
+  border-radius: 20px; /* Ajusta este valor para que la caja se vea ovalada */
+  margin-top: 40px; /* Ajusta este valor para mover la caja más abajo de 40 píxeles */
+}
+
