--- a/src/app/pop-up-load-previous-routine/pop-up-load-previous-routine.component.html
+++ b/src/app/pop-up-load-previous-routine/pop-up-load-previous-routine.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header> <!--Pop-up when starting the app-->
   <ion-toolbar>
     <ion-title class="titleicon" style="display:inline-block"> Previous Routines </ion-title>
     <img slot="end"  style="display:inline-block" />
