--- a/src/app/sidebar-accordeon/sidebar-accordeon.component.html
+++ b/src/app/sidebar-accordeon/sidebar-accordeon.component.html
@@ -1,5 +1,7 @@
+<!--All of the sidebar-->
+
 <ion-content #full [scrollEvents]="true" (ionScroll)="handleScroll($any($event))">
-  <ion-accordion-group [multiple]="true" #listenerbig> <!--(ionChange)="accordionGroupChange($event)"-->
+  <ion-accordion-group [multiple]="true" #listenerbig>
     <ion-accordion value="NonVerbal">
       <ion-item slot="header" color="primary">
         <ion-icon name="mic-off-outline" slot="start"></ion-icon>
@@ -7,8 +9,7 @@
       </ion-item>
       <ion-item-group slot="content">
         <!--Inside of the verbal accordeon-->
-        <!--<ion-accordion-group [multiple]="true" #listener_non_verbal (ionChange)="accordionGroupChange($event, 'listener_non_verbal')">-->
-          <ion-accordion value="body-gestures" [ngClass]="{'custom-expanded': isExpanded, 'custom-collapsed': !isExpanded}">
+          <ion-accordion value="body-gestures">
             <ion-item slot="header" color="light">
               <ion-icon aria-hidden="true" name="accessibility-outline" slot="start"></ion-icon>
               <ion-label>Body Gestures</ion-label>
@@ -20,8 +21,7 @@
                 draggable="true"
                 (dragend)="onDragEnd($event, item)"
                 title="{{ item.description }}"
-                class="list_puzzle"
-                (contextmenu)="openPopover(item.color, $event, item)">
+                class="list_puzzle">
                 <ion-icon src="../../assets/semi_cropped.svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+item.color+')', 'float':'left', 'margin-top': '-2px', 'margin-left':'10px'}"></ion-icon>
                   <div class="square red">
                     <div id="text"
@@ -49,8 +49,7 @@
                 draggable="true"
                 (dragend)="onDragEnd($event, item)"
                 title="{{ item.description }}"
-                class="list_puzzle"
-                (contextmenu)="openPopover(item.color, $event, item)">
+                class="list_puzzle">
                 <ion-icon src="../../assets/semi_cropped.svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+item.color+')', 'float':'left', 'margin-top': '-2px', 'margin-left':'10px'}"></ion-icon>
                   <div class="square green">
                     <div id="text"
@@ -66,7 +65,6 @@
               </ion-list>
             </div>
           </ion-accordion>
-        <!--</ion-accordion-group>-->
       </ion-item-group>
     </ion-accordion>
     <ion-accordion value="Verbal" class="my-componente2">
@@ -79,8 +77,7 @@
         <div draggable="true"
           (dragend)="onDragEnd($event, talk)"
           title="{{ talk.description }}"
-          class="list_puzzle"
-          (contextmenu)="openPopover(talk.color, $event, talk)">
+          class="list_puzzle">
           <ion-icon src="../../assets/semi_cropped.svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+talk.color+')', 'float':'left', 'margin-top': '-2px', 'margin-left':'10px'}"></ion-icon>
             <div class="square yellow">
               <div id="text"
@@ -105,8 +102,7 @@
                 draggable="true"
                 (dragend)="onDragEnd($event, item)"
                 title="{{ item.description }}"
-                class="list_puzzle"
-                (contextmenu)="openPopover(item.color, $event, item)">
+                class="list_puzzle">
                 <ion-icon src="../../assets/semi_cropped.svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+item.color+')', 'float':'left', 'margin-top': '-2px', 'margin-left':'10px'}"></ion-icon>
                   <div class="square yellow">
                     <div id="text"
@@ -122,7 +118,6 @@
               </ion-list>
             </div>
           </ion-accordion>
-        <!--</ion-accordion-group>-->
       </div>
     </ion-accordion>
     <ion-accordion value="Actions">
@@ -162,6 +157,7 @@
 
 </ion-content>
 
+<!--Dropdown menu when right clicking on a routine-->
 <ion-popover #popover [isOpen]="isOpen" (didDismiss)="isOpen = false" triggerAction="context-menu">
   <ng-template>
     <ion-content>
