--- a/src/app/pop-up-save/pop-up-save.component.html
+++ b/src/app/pop-up-save/pop-up-save.component.html
@@ -16,10 +16,9 @@
 
   <ion-input class="center-input" placeholder="Name Routine" [(ngModel)]="name_routine"></ion-input>
 
-  <div class="center-buttons">
-    <ion-button class="small-button save-button" (click)="save()">
-      <img width="50" height="50" src="https://img.icons8.com/ios/50/save--v1.png" alt="save"/>
-      saved
+  <div class="center-buttons ion-text-center">
+    <ion-button class="small-button save-button" (click)="save()" color="success">
+      Save
     </ion-button>
   </div>
-  
+</ion-content>
