--- a/src/app/sidebar-accordeon/sidebar-accordeon.component.scss
+++ b/src/app/sidebar-accordeon/sidebar-accordeon.component.scss
@@ -31,7 +31,7 @@
     align-items: center;
     text-align: center;
     background: ar(--ion-color-primary);
-    color: var(--ion-color-primary);
+    color: var(--ion-color-primary); // Color blue for the accordeon tab
     background-color: var(--ion-color-light);
     float: center;
   }
