--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,6 +74,13 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-color-white: #ffffff;
+	--ion-color-white-rgb: 255,255,255;
+	--ion-color-white-contrast: #000000;
+	--ion-color-white-contrast-rgb: 0,0,0;
+	--ion-color-white-shade: #e0e0e0;
+	--ion-color-white-tint: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -83,6 +90,14 @@
    */
 
   body {
+
+    --ion-color-white: #121212;
+    --ion-color-white-rgb: 0,0,0;
+    --ion-color-white-contrast: #ffffff;
+    --ion-color-white-contrast-rgb: 255,255,255;
+    --ion-color-white-shade: #3d3d3d;
+    --ion-color-white-tint: #121212;
+
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
@@ -233,4 +248,13 @@
 
     --ion-card-background: #1e1e1e;
   }
+}
+
+.ion-color-white {
+	--ion-color-base: var(--ion-color-white);
+	--ion-color-base-rgb: var(--ion-color-white-rgb);
+	--ion-color-contrast: var(--ion-color-white-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-white-contrast-rgb);
+	--ion-color-shade: var(--ion-color-white-shade);
+	--ion-color-tint: var(--ion-color-white-tint);
 }
