--- a/src/app/sidebar-accordeon/sidebar-accordeon.component.html
+++ b/src/app/sidebar-accordeon/sidebar-accordeon.component.html
@@ -1,7 +1,7 @@
 <ion-header class="sidebar">
   <ion-toolbar class="custom-header">
     <ion-avatar slot="start">
-      <ion-img src="IMG_0143.jpg"></ion-img>
+      <ion-img src="assets/icon/IMG_0143.jpg"></ion-img>
     </ion-avatar>
     <ion-title>EVA</ion-title>
   </ion-toolbar>
